recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:7: error: illegal start of simple expression
		polygonFractal(levels-1, )
                                         ^PolygonFractal:13: error: ')' expected but '}' found.
	}
        ^